@@ -1,4 +1,9 @@
+import java.awt.Color;
+import java.awt.Container;
 import java.awt.Dimension;
+import java.awt.Font;
+import java.awt.FontFormatException;
+import java.awt.GraphicsEnvironment;
 import java.awt.GridLayout;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
@@ -8,24 +13,38 @@ import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Hashtable;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
+import javax.swing.AbstractButton;
+import javax.swing.ButtonGroup;
 import javax.swing.JButton;
 import javax.swing.JFrame;
 import javax.swing.JLabel;
+import javax.swing.JOptionPane;
 import javax.swing.JPanel;
+import javax.swing.JRadioButton;
 import javax.swing.JSlider;
 
+import org.apache.commons.io.FileUtils;
 import org.hyperic.sigar.Mem;
 import org.hyperic.sigar.Sigar;
 import org.hyperic.sigar.SigarException;
 
 public class installOptions extends Install {
 	static int ramSizeChosen = 0;
+	static long memSize;
+	static int ramSizeMb;
+	static int ramSizeGb;
+	static Font pretty;
+	static String q = File.separator;
 
-// To call the launcher args set mess, call the SliderGUI()
 	public static void launcherSettings() {
-		File launcherSettings = new File(Driver.getMinecraftInstall() + "\\launcher_profiles.json");
+		File launcherSettings = new File(Driver.getMinecraftInstall() + q + "launcher_profiles.json");
 		ArrayList<String> launcherData = new ArrayList<>();
 
 		try {
@@ -46,28 +65,32 @@ public class installOptions extends Install {
 			String chosenRamSize = "-Xmx" + Integer.toString(ramSizeChosen) + "M";
 			int versionPos = launcherData.indexOf("\"lastVersionId\" : \"1.7.10-Forge10.13.4.1614-1.7.10\",");
 			int argsPos = versionPos - 2;
-			String newArgs = "\"javaArgs\" :\"-XX:HeapDumpPath=MojangTricksIntelDriversForPerformance_javaw.exe_minecraft.exe.heapdump -XX:+UseG1GC "
+			String newArgs = "\"javaArgs\" :\"-XX:HeapDumpPath=MojangTricksIntelDriversForPerformance_javaw.exe_minecraft.exe.heapdump -XX:+UseG1GC -XX:+UseConcMarkSweepGC"
 					+ chosenRamSize
 					+ " -XX:+UnlockExperimentalVMOptions -XX:G1NewSizePercent=20 -XX:G1ReservePercent=20 -XX:MaxGCPauseMillis=50 -XX:G1HeapRegionSize=32M\",";
 			launcherData.set(argsPos, newArgs);
-
 			Object[] settingsArray = launcherData.toArray();
 
 			launcherSettings.delete();
-			FileWriter newSettings = new FileWriter(Driver.getMinecraftInstall() + "\\launcher_profiles.json");
+			FileWriter newSettings = new FileWriter(Driver.getMinecraftInstall() + q + "launcher_profiles.json");
 			for (int i = 0; i < settingsArray.length; i++) {
 				newSettings.write(settingsArray[i] + "\n");
 			}
 			newSettings.close();
-			System.out.println("Launcher settings changed and memory set.");
-			installFinalize();
-			
+			System.out.println(" Launcher settings changed and memory set.");
+			if (featuresUsed == false) {
+				installFinalize();
+			}
+
 		} catch (IOException e1) {
-			e1.printStackTrace();
+			GUI.errors.setText("Chansey");
+
+		} catch (ArrayIndexOutOfBoundsException a) {
+			GUI.errors.setText("Skitty");
 		}
 	}
 
-	public static void sliderGUI() throws SigarException {
+	public static void sliderGUI() {
 		JFrame.setDefaultLookAndFeelDecorated(true);
 		JFrame frame = new JFrame("Ram adjustment slider");
 		frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
@@ -76,27 +99,28 @@ public class installOptions extends Install {
 		JPanel buttonPanel = new JPanel();
 		GridLayout format = new GridLayout(2, 1);
 
-		Sigar memInfo = new Sigar();
-		Mem memory = new Mem();
+		try {
+			Sigar memInfo = new Sigar();
+			Mem memory = new Mem();
+			memory.gather(memInfo);
+			memSize = memory.getRam();
+			int ram = (int) memSize;
+			ramSizeMb = setRamSize(ram);
+			ramSizeGb = ramSizeMb / 1024;
+		} catch (SigarException s) {
 
-		memory.gather(memInfo);
-		long memSize = memory.getRam();
-		int ram = (int) memSize;
-		int ramSizeMb = setRamSize(ram);
-		int ramSizeGb = ramSizeMb / 1024;
+		}
 
 		JButton next = new JButton("Continue");
 		JSlider allocatedRam = new JSlider();
 		allocatedRam.setMaximum(ramSizeMb - 2048);
 		allocatedRam.setMinimum(2048);
 		allocatedRam.setValue(4096);
-
 		allocatedRam.setMajorTickSpacing(1024);
 		allocatedRam.setMinorTickSpacing(512);
 		allocatedRam.setPaintTicks(true);
 		allocatedRam.setPaintLabels(true);
-		System.out.println();
-		// System.out.println(Integer.toString(ramSizeGb) + " Gb");
+
 		Hashtable<Integer, JLabel> position = new Hashtable<Integer, JLabel>();
 		for (int i = 2; i < ramSizeGb; i++) {
 			switch (i) {
@@ -168,7 +192,6 @@ public class installOptions extends Install {
 		frame.setLayout(format);
 		frame.setResizable(false);
 		frame.setVisible(true);
-
 	}
 
 	public static int getRamSizeChosen() {
@@ -190,7 +213,6 @@ public class installOptions extends Install {
 			totalRam = 16384;
 			// 16 Gb.
 		}
-
 		if (ram <= 14336 && ram > 12288) {
 			totalRam = 14366;
 			// 14 Gb.
@@ -199,12 +221,10 @@ public class installOptions extends Install {
 			totalRam = 12288;
 			// 12 Gb.
 		}
-
 		if (ram <= 10240 && ram > 9216) {
 			totalRam = 10240;
 			// 10 Gb.
 		}
-
 		if (ram <= 9216 && ram > 8192) {
 			totalRam = 9216;
 			// 9 Gb.
@@ -227,17 +247,207 @@ public class installOptions extends Install {
 		}
 		if (ram <= 3072) {
 			notSupported();
-			// 4 gb minimum. 2 Gb for pack, and 2 Gb for the OS.
+			// 4 gb minimum. 2 Gb for pack, and 2 Gb for the OS. This won't work.
 		}
 		if (totalRam == 0) {
-
 			// Error catching stuff, essentially.
 		}
-
 		return totalRam;
 	}
 
 	public static void notSupported() {
+		String message = "Why are you trying to run this pack on a machine with this little ram?";
+		JOptionPane.showMessageDialog(new JFrame(), message, "Low Ram", JOptionPane.ERROR_MESSAGE);
+		System.exit(0);
+	}
 
+	public static void otherOptionsGUI() {
+		JFrame frame = new JFrame("Options");
+
+		JRadioButton extract = new JRadioButton("Extract.");
+		JRadioButton launcher = new JRadioButton("Set Memory.");
+		JRadioButton ping = new JRadioButton("Ping Server.");
+		JButton go = new JButton("Continue");
+		ButtonGroup options = new ButtonGroup();
+
+		options.add(ping);
+		options.add(launcher);
+		options.add(extract);
+
+		Color rbc = new Color(220, 255, 255); // Hex value: dcffff
+
+		JPanel pingPanel = new RoundedPanel(10, rbc);
+		JPanel launcherPanel = new RoundedPanel(10, rbc);
+		JPanel extractPanel = new RoundedPanel(10, rbc);
+
+		Container c = frame.getContentPane();
+
+		c.setBackground(new Color(255, 220, 220));// Hex value: ffdcdc
+
+		ping.setBackground(rbc);
+		launcher.setBackground(rbc);
+		extract.setBackground(rbc);
+
+		ActionListener radioButtonEvent = new ActionListener() {
+
+			public void actionPerformed(ActionEvent ae) {
+				AbstractButton absButton = (AbstractButton) ae.getSource();
+				String selection = absButton.getText();
+
+				if (selection.equals("Extract.")) {
+					extract.setEnabled(false);
+					launcher.setEnabled(false);
+					ping.setEnabled(false);
+					selectedOption = 1;
+				}
+				if (selection.equals("Set Memory.")) {
+					extract.setEnabled(false);
+					launcher.setEnabled(false);
+					ping.setEnabled(false);
+					selectedOption = 2;
+				}
+				if (selection.equals("Ping Server.")) {
+					extract.setEnabled(false);
+					launcher.setEnabled(false);
+					ping.setEnabled(false);
+					selectedOption = 3;
+				}
+			}
+		};
+
+		ActionListener buttonEvent = new ActionListener() {
+
+			public void actionPerformed(ActionEvent e) {
+				if (selectedOption == 1) {
+					System.out.println(" Extracting File...");
+					Extractor.Extract(q + Driver.getDownloadsLocation() + q + Driver.zipFile, "Modpack");
+				}
+				if (selectedOption == 2) {
+					installOptions.sliderGUI();
+				}
+				if (selectedOption == 3) {
+					System.out.println(" Pinging Server...");
+					serverPing();
+				}
+			}
+		};
+
+		try {
+			pretty = Font.createFont(Font.TRUETYPE_FONT, new File("resources" + q + "Equestria.ttf")).deriveFont(16f);
+			GraphicsEnvironment ge = GraphicsEnvironment.getLocalGraphicsEnvironment();
+			ge.registerFont(Font.createFont(Font.TRUETYPE_FONT, new File("resources" + q + "Equestria.ttf")));
+		} catch (IOException e) {
+
+		} catch (FontFormatException e) {
+			GUI.errors.setText("Screwy font");
+		}
+
+		ping.addActionListener(radioButtonEvent);
+		launcher.addActionListener(radioButtonEvent);
+		extract.addActionListener(radioButtonEvent);
+
+		go.addActionListener(buttonEvent);
+
+		extractPanel.setBounds(73, 50, 175, 25);
+		extract.setBounds(78, 55, 150, 15);
+
+		pingPanel.setBounds(73, 85, 175, 25);
+		ping.setBounds(78, 90, 150, 15);
+
+		launcher.setBounds(78, 125, 150, 15);
+		launcherPanel.setBounds(73, 120, 175, 25);
+
+		go.setBounds(100, 210, 100, 20);
+
+		ping.setFont(pretty);
+		launcher.setFont(pretty);
+		extract.setFont(pretty);
+		go.setFont(pretty);
+
+		frame.add(ping);
+		frame.add(pingPanel);
+
+		frame.add(launcher);
+		frame.add(launcherPanel);
+
+		frame.add(extract);
+		frame.add(extractPanel);
+
+		frame.add(go);
+		frame.setSize(320, 320);
+		frame.setResizable(false);
+
+		frame.setLayout(null);// using no layout managers
+		frame.setVisible(true);
+
+	}
+
+	public static Boolean verifyInstall() {
+		String fullLink = "https://sites.google.com/view/aubreys-modpack-info/home/modlist-full";
+		ArrayList<String> fullMods = new ArrayList<>();
+		ArrayList<String> modsDirList = new ArrayList<>();
+
+		File modsDir = new File(Driver.getMinecraftInstall() + q + "mods");
+		StringBuilder modName = new StringBuilder();
+
+		List<File> files = (List<File>) FileUtils.listFiles(modsDir, null, true);
+
+		websiteReader.siteReader(fullLink, false, 1, fullMods);
+
+		String name = "";
+
+		if (files.size() == 0) {
+			// Do nothing, just catching stuff, really.
+		}
+		if (files.size() != 0) {
+			for (int i = files.size() - 1; i > 0; i--) {
+				String folders = modsDir.toString();
+				name = files.get(i).getAbsolutePath();
+				modName.append(name);
+				modName.delete(0, folders.length() + 1);
+				modsDirList.add(modName.toString());
+				modName.delete(0, modName.length());
+				name = "";
+			}
+
+			Collections.sort(modsDirList);
+			Collections.sort(fullMods);
+
+			Set<String> modsSet = new HashSet<String>(modsDirList);
+			Set<String> siteSet = new HashSet<String>(fullMods);
+
+			List<String> modsSorted = modsSet.stream().collect(Collectors.toList());
+			List<String> siteModsSorted = siteSet.stream().collect(Collectors.toList());
+
+			Set<String> mods = new HashSet<>(siteModsSorted);
+			mods.removeAll(modsSorted);
+
+			mods.remove("mcheli");
+			ArrayList<String> missing = new ArrayList<>(mods);
+
+			if (!mods.isEmpty()) {
+				for (int i = mods.size(); i > 0; i--) {
+					// System.out.println("Missing mod(s): " + missing.remove(i - 1));
+					fixMods(q + missing.remove(i - 1));
+				}
+			}
+
+			if (mods.isEmpty()) {
+				return true;
+			}
+		}
+		return false;
+	}
+
+	public static void fixMods(String missingMod) {
+		File modsDirectory = new File(Driver.getMinecraftInstall() + q + "mods");
+		File packDirectory = new File(Driver.getDownloadsLocation() + q + "Modpack" + q + "mods");
+		File missingModFile;
+		try {
+			missingModFile = new File(packDirectory + missingMod);
+			FileUtils.copyFileToDirectory(missingModFile, modsDirectory);
+		} catch (IOException e) {
+			GUI.errors.setText("Lapras");
+		}
 	}
 }
